# breeze

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/html/: annotated.html  bitflags_8h_source.html  classBitFlag-members.html  classBitFlag.html  classes.html  dir_09b4ba9cf39026964cd3548cada48f97.html  dir_18b6d20747f5218566b4d1318489d9cf.html  dir_1da5f2c156c0a37c2c127c7f7d6530f9.html  dir_3986bdfdde0198a146b78b3b621e448e.html  dir_3bcf79287898bf7f4fadaffbd75718fb.html  dir_4d4764e71591bfd510e2a2390426ec20.html  dir_720ab4edc5aa9e53334358160c425a08.html  dir_a9b221aebfa3d97f18ebcaa84bb5b38d.html  dir_be1100dccf93ca0df2953953630f1e30.html  dir_c30e422f8a150525f14e12e7b493a08c.html  dir_ca074a2cc02004a4ebb1621d5fc41aa3.html  dir_e0a7d1dab5f033a7428b7b9ea356d06d.html  dir_e26b5bec5aa181584848b97844f1c439.html  dir_ec9b4de7ac0b70e5f6c9780dfb834332.html  dir_f08513faf614e381b7bc034dfdecfbee.html  dir_f396504afdc959660871b003fa10164d.html  files.html  functions.html  functions_func.html  index.html  md__home_danielethridge_Documents_dev_breeze_README.html  pages.html
docs/html/search/: all_0.js  all_1.js  all_3.js  classes_0.js  functions_0.js  functions_2.js  functions_4.js  pages_0.js  searchdata.js
include/: bitflags.h
include/breeze/: bitflags.h  math.h  orm.h  timer.h
include/breeze/time/: stopwatch.h
src/: orm.cpp  timer.cpp
src/time/: stopwatch.cpp
test/bitflags/: CMakeLists.txt  bitflags-t.cpp
test/math/: CMakeLists.txt  polynomial-t.cpp
test/orm/: CMakeLists.txt  orm-t.cpp
test/stopwatch/: CMakeLists.txt  stopwatch-t.cpp
test/timer/: CMakeLists.txt  timer-t.cpp
